Add RestControllerAdvice to show validations in the response