@@ -1,23 +1,44 @@
 package com.epam.gym.exception;
 
+import com.epam.gym.dto.ErrorDetail;
+import com.epam.gym.dto.ValidationErrorResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-//@RestControllerAdvice
+/**
+ * Global exception handler for validation errors (MethodArgumentNotValidException).
+ * Returns a structured ValidationErrorResponse.
+ */
+@RestControllerAdvice
 public class ValidationExceptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<List<String>> handleValidationErrors(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
+    public ResponseEntity<ValidationErrorResponse> handleValidationErrors(MethodArgumentNotValidException ex, HttpServletRequest request) {
+
+        List<ErrorDetail> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .toList();
+                .map(error -> new ErrorDetail(error.getField(), error.getDefaultMessage()))
+                .collect(Collectors.toList());
 
-        return ResponseEntity.badRequest().body(errors);
+        ex.getBindingResult().getGlobalErrors().forEach(globalError ->
+                errors.add(new ErrorDetail(globalError.getObjectName(), globalError.getDefaultMessage()))
+        );
+
+        ValidationErrorResponse response = new ValidationErrorResponse(
+                HttpStatus.BAD_REQUEST.value(),
+                "Validation Failed",
+                request.getRequestURI(),
+                errors
+        );
+
+        return ResponseEntity.badRequest().body(response);
     }
 }
